Fixing overflowing content

--- a/src/asset/css/main.scss
+++ b/src/asset/css/main.scss
@@ -159,6 +159,7 @@ table:not(.bbs) tr:nth-child(2n + 1) {
 
 iframe {
   border: 0;
+  max-width: 100%;
 }
 
 // App width
